--- a/facebook/package.json
+++ b/facebook/package.json
@@ -8,7 +8,10 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
+    "redux": "^4.0.1",
     "svg-icons": "^1.0.13"
   },
   "scripts": {
